Test/bad/coverage/simple_missing_z.tt
import Data.Nat

pred : Nat -> Nat
pat n : Nat =>
  pred (S n) = n